@@ -22,7 +22,7 @@ abstract class Controller
      * @var array
      */
     protected $route_params = [];
-
+    protected $input;
     /**
      * Class constructor.
      *
@@ -30,9 +30,10 @@ abstract class Controller
      *
      * @return void
      */
-    public function __construct($route_params)
+    public function __construct($route_params,$input)
     {
         $this->route_params = $route_params;
+        $this->input = $input;
     }
 
     /** Overriding...
