@@ -234,7 +234,20 @@ class Router
     {
         return $this->params;
     }
-
+    public function getInput()
+    {
+        $method = (!empty($default)) ? $default : $_SERVER['REQUEST_METHOD'];
+        if ($method === 'POST') {
+            $data = $_POST;
+        } elseif ($method === 'GET' ) {
+            $data = $_GET;
+        } elseif ($method === 'REQUEST') {
+            $data = $_REQUEST;
+        } else {
+            parse_str(file_get_contents('php://input'), $data);
+        }
+        return (new \Zest\Data\Conversion)::arrayObject($data);
+    }
     /**
      * Dispatch the route, creating the controller object and running the
      * action method.
@@ -253,7 +266,7 @@ class Router
                 $controller = $this->getNamespace().$controller;
 
                 if (class_exists($controller)) {
-                    $controller_object = new $controller($this->params);
+                    $controller_object = new $controller($this->params,$this->getInput($this->params['method']));
 
                     $action = $this->params['action'];
                     $action = $this->convertToCamelCase($action);
