@@ -7,3 +7,5 @@ Changes:
      b => Support DISTINCT in select query
 }
 5. Add view function in functions.php
+6. Added getInput method in Router class
+7. Allow to get input using $this->input properity in controller
